# road-anomaly-detection

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE.md  README.md
data/: conf.toml
docs/: anomaly_detection.drawio
src/: lib.rs  main.rs
src/app/: app.rs  app_error.rs  app_settings.rs  mod.rs
src/detection/: detection.rs  mod.rs
src/draw/: draw.rs  mod.rs
src/events/: events.rs  mod.rs
src/publisher/: mod.rs  publisher.rs  redis_publisher.rs
src/tracker/: mod.rs  tracker.rs  tracker_error.rs
src/utils/: mod.rs  utils.rs
src/video_capture/: mod.rs  threaded_frame.rs  video_capture.rs
src/zones/: mod.rs  zones.rs  zones_error.rs
