[package]
name = "road-anomaly-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "road-anomaly-detector"
path = "src/main.rs"

[dependencies]
toml = "0.5"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = { version = "0.4", features = ["serde"] }
opencv = { version = "0.91.3" }
od_opencv = "0.1.6"
