[package]
name = "road-anomaly-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "road-anomaly-detector"
path = "src/main.rs"

[dependencies]
toml = "0.5"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = { version = "0.91.3" }
od_opencv = "0.1.6"
mot-rs = "0.1.2"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
redis = { version = "0.25.4" }
base64 = { version = "0.22.1" }
